force-app/main/default/objects/Staff_Service_Type__c/Staff_Service_Type__c.object-meta.xml
<CustomObject>
    <label>Staff Service Type</label>
    <pluralLabel>Staff Service Types</pluralLabel>
    <description>Junction linking Staff (Contact) to Service Types they can handle</description>
    <nameField>
        <label>Staff Service Type Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>