force-app/main/default/objects/Staff_Service_Type__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Lookup</type>
    <description>Service type the staff member is qualified for</description>
    <required>true</required>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipName>Staff_Service_Types</relationshipName>
    <relationshipLabel>Staff Service Types</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>