force-app/main/default/objects/Staff_Service_Type__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <label>Staff</label>
    <type>Lookup</type>
    <description>Staff member qualified for this service</description>
    <required>true</required>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Staff_Service_Types</relationshipName>
    <relationshipLabel>Staff Service Types</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>